Fixed overflow and spacing problems

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,8 +27,10 @@ body{
   color: $main-color-light;
   min-height: 100vh;
   line-height: 1.6;
+  overflow: hidden;
 }
 
+// Mixins
 @mixin input-form{
   margin: 0.5rem 0;
   width: $website-width;
@@ -38,7 +40,7 @@ body{
 
 @mixin input-field{
   width: 90%;
-  height: 1rem;
+  // height: 1rem;
   
   overflow: hidden;
   white-space: nowrap;
