--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,8 +20,8 @@
   overflow-y: scroll;
   height: 75vh;
   width: 100%;
-  margin-top: 2rem;
-  padding: 0.5rem;
+  // margin-top: 2rem;
+  // padding: 0.5rem;
   border: 2px solid $main-color;
   display: none;
 }
